# KivyMD

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  setup.cfg  setup.py
.ci/: generate_matrix.py  macos_dependencies.sh  macos_versions.sh  move_binary.py  ubuntu_dependencies.sh  windows_dependencies.ps1
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-demos.yml  build.yml  lint.yml  release.yml  test.yml
aprender/: main.py
demos/: README.md
demos/crane/: README.md  buildozer.spec  main.py
demos/fortnightly/: README.md  buildozer.spec  main.py
demos/kitchen_sink/: .gitignore  LICENSE  README.md  buildozer.spec  dialogs.py  main.py  pyinstaller.spec  screens.py  (+1 more)
docs/: Makefile  make.bat
examples/: appbar.py  badge.py  bottomappbar.py  bottomsheet.py  button.py  card.py  checkbox.py  chip.py  codeblock.py  common_app.py  datatables.py  datepicker.py  dialog.py  dropdownitem.py  dynamic_color_image.py  dynamic_color_schemes.py  expansionpanel.py  exprogressindicator.py  hero.py  imagelist.py  label.py  list.py  loadingindicator.py  material_scroll.py  md_axis_transition.py  md_transitions.py  navigation_bar.py  navigation_rail.py  navigationdrawer.py  progressindicator.py  ripple_m3.py  search.py  segmented_button.py  slider.py  snackbar.py  switch.py  tab.py  textfield.py  timepicker.py  tooltip.py
kivymd/: __init__.py  _version.py  accordion.py  accordionlistitem.py  animation.py  app.py  backgroundcolorbehavior.py  bottomnavigation.py  bottomsheet.py  button.py  card.py  cards.py  chips.py  color_definitions.py  date_picker.py  dialog.py  dynamic_color.py  elevation.py  elevationbehavior.py  factory_registers.py  fanscreenmanager.py  filemanager.py  font_definitions.py  grid.py  icon_definitions.py  imagelists.py  label.py  list.py  managerswiper.py  material_resources.py  menu.py  menus.py  navigationdrawer.py  pickers.py  popupscreen.py  progressbar.py  progressloader.py  refreshlayout.py  ripplebehavior.py  selectioncontrols.py  (+15 more)
(+724 files in other folders)
