[metadata]
name = kivymd
description = Set of widgets for Kivy inspired by Google's Material Design
author = Andres Rodriguez, fork author - Ivanov Yuri
author_email = kivydevelopment@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = kivymd, kivy, material, ui
license = MIT
license_file = LICENSE
url = https://github.com/kivymd/KivyMD
project_urls =
    Documentation=https://kivymd.readthedocs.io
    Wiki=https://github.com/kivymd/KivyMD/wiki
    Tracker=https://github.com/kivymd/KivyMD/issues
classifiers = Development Status :: 4 - Beta
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Programming Language :: Python :: 3.10
              Operating System :: OS Independent
              Operating System :: Android
              Operating System :: POSIX :: Linux
              Operating System :: POSIX :: BSD :: FreeBSD
              Operating System :: Microsoft :: Windows
              Operating System :: iOS
              Operating System :: MacOS
              Operating System :: MacOS :: MacOS X
              Environment :: MacOS X
              Environment :: Win32 (MS Windows)
              Environment :: X11 Applications
              Intended Audience :: Developers
              Intended Audience :: End Users/Desktop
              Intended Audience :: Information Technology
              Intended Audience :: Science/Research
              Topic :: Software Development :: User Interfaces
              Topic :: Scientific/Engineering :: Human Machine Interfaces
              Topic :: Scientific/Engineering :: Visualization
platforms = any

[upload]
repository = https://upload.pypi.org/legacy/

[flake8]
ignore = E501,W503,E203,E731,F401,F824
max-line-length = 80
exclude = .git/,__pycache__,build/,.eggs/,.buildozer
statistics = true
count = true
